# ICfinder

./: README.md  pyproject.toml  update_kernel.sh
examples/: mw_lmc_example_orbits.ipynb
icsfinder/: integrator.py
icsfinder/.ipynb_checkpoints/: __init__-checkpoint.py  integrator-checkpoint.py  integrator_mine-checkpoint.py
