[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icsfinder"
version = "0.0.1"
authors = [
  { name="Nicolas Garavito-Camargo", email="jngaravitoc@email.arizona.edu" }
]
description = "A python package to find the ICS for orbits of satellite galaxies"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["astronomy", "dynamics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "astropy>=5.0",
    "gala>=1.6",
    "matplotlib>=3.8"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["icsfinder"]



[project.urls]
Homepage = "https://github.com/jngarvitoc/icsfinder"
Issues = "https://github.com/jngaravitoc/icsfinder/issues"
